force-app/main/default/objects/Booking__c/fields/Guest__c.field-meta.xml
<CustomField>
    <fullName>Guest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The guest who made the booking.</description>
    <label>Guest</label>
    <referenceTo>Guest__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>